2004-03-29  Larry Ewing  <lewing@ximian.com>

	* gui/component/addressbook-component.c
	(selector_tree_drag_data_received): call drag_finish properly.
	(selector_tree_drag_motion): set the drag status properly.

2004-03-25 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/component/eab-editor.c (eab_editor_prompt_to_save_changes) : 
	do  eab_editor_is_valid check only when user wants to save.

2004-03-24  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook-component.c
	(fill_popup_menu_callback): don't let the user delete their
	Personal addressbook.  This is just a nice UI thingy..  A similar
	fix needs to be made to e-d-s. so that attempts that circumvent a
	nice UI will also fail.

2004-03-24  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/eab-gui-util.c (eab_show_multiple_contacts): don't
	know what I was thinking approving this change.  the _() was only
	used in the plural case (in fact where n > 5), so a singular case
	was never necessary, and neither was the call to ngettext.

2004-03-24  Chris Toshok  <toshok@ximian.com>

	* gui/contact-list-editor/e-contact-list-editor.c
	(e_contact_list_editor_get_type): parent_type == EAB_TYPE_EDITOR.
	(e_contact_list_editor_class_init): fill in editor_class virtual
	functions, and remove all the signals.
	(list_added_cb): call eab_editor_contact_* instead of emitting a
	signal here.  also call eab_editor_close
	(list_modified_cb): same.
	(e_contact_list_editor_is_valid): new function.
	(e_contact_list_editor_is_changed): same.
	(e_contact_list_editor_get_window): same.
	(file_close_cb): call eab_editor_ functions.
	(list_deleted_cb): call eab_editor_contact_* instead of emitting a
	signal here.  also call eab_editor_close
	(delete_cb): call eab_editor_* functions.
	(contact_list_editor_destroy_notify): call eab_editor_remove.
	(e_contact_list_editor_new): call eab_editor_add, and remove the
	g_object_ref/gtk_object_sink two-step.
	(e_contact_list_editor_show): make static, and make arg EABEditor.